# argon2wasm

./: .gitignore  Cargo.toml  README.md  build.sh
lib/: argon2.mjs  argon2.ts
src/: lib.rs
