[package]
name = "argon2wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
argon2 = "0.4"
getrandom = { version = "0.2", features = ["js"]}
rand_core = { version = "0.6", features = ["std"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"